--- a/vyne-parent/vyne-query-service/src/main/web/src/app/query-wizard/result-display/result-container.component.html
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/query-wizard/result-display/result-container.component.html
@@ -1,8 +1,8 @@
 <div>
-  <div class="result-status success-display" *ngIf="isSuccess">
-    <i class="material-icons">check_circle_outline</i>
-    <span>Success!</span>
-  </div>
+  <!--<div class="result-status success-display" *ngIf="isSuccess">-->
+    <!--<i class="material-icons">check_circle_outline</i>-->
+    <!--<span>Success!</span>-->
+  <!--</div>-->
   <div class="result-status error-display" *ngIf="isError">
     <i class="material-icons">error_outline</i>
     <span>{{ result.message }}</span>
