--- a/vyne-parent/vyne-query-service/src/main/web/src/app/query-wizard/taxi-viewer/call-explorer/operation-view.component.html
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/query-wizard/taxi-viewer/call-explorer/operation-view.component.html
@@ -13,6 +13,11 @@
     </div>
 
   </div>
+  <div class="close-container">
+    <button mat-icon-button (click)="closeClicked()">
+      <mat-icon>close</mat-icon>
+    </button>
+  </div>
   <app-code-container lang="json" *ngIf="operation.requestBody" [content]="operation.requestBody" name="Request"></app-code-container>
   <app-code-container lang="json" *ngIf="operation.response" [content]="operation.response" name="Response"></app-code-container>
 </div>
