--- a/vyne-parent/vyne-query-service/src/main/web/src/app/query-wizard/result-display/result-container.component.scss
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/query-wizard/result-display/result-container.component.scss
@@ -12,7 +12,7 @@
   }
   padding: 6px 0;
   padding: 8px;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, .6);
+  //box-shadow: 0 1px 2px rgba(0, 0, 0, .6);
   margin-bottom: 8px;
   border-radius: 4px;
 }
