--- a/vyne-parent/vyne-query-service/src/main/web/src/app/query-wizard/taxi-viewer/service-graph/service-graph.component.html
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/query-wizard/taxi-viewer/service-graph/service-graph.component.html
@@ -16,7 +16,7 @@
       <ng-template #nodeTemplate let-node>
         <svg:g class="node">
           <svg:rect [attr.width]="node.width" [attr.height]="node.height" fill="#ffffff" rx="6" ry="6"
-                    [attr.stroke]="getStroke(node)" stroke-width="2"/>
+                    [attr.stroke]="getStroke(node)" stroke-width="2" style="stroke-width:2"/>
           <svg:text dominant-baseline="hanging" [attr.x]="10" [attr.y]="getNodeLabelYOffset(node)">
             <tspan>{{node.label}}</tspan>
             <tspan *ngIf="node.returnType" dy="20" dx="10" x="0">{{node.returnType}}</tspan>
