support multi-entity queries

--- a/vyne-parent/vyne-query-service/src/main/web/src/app/query-wizard/result-display/result-viewer.component.html
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/query-wizard/result-display/result-viewer.component.html
@@ -1,5 +1,6 @@
 <div class="typed-value-container" *ngIf="isPrimitive">
-  <div class="type-name">{{ type.name.name }}</div>
+
+  <div class="type-name">{{ type?.name.name }}</div>
   <div class="type-value">{{ result }}</div>
 </div>
 <div class="typed-object-container" *ngIf="isTypedObject">
