--- a/vyne-parent/vyne-query-service/src/main/web/src/app/query-history/query-history.component.html
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/query-history/query-history.component.html
@@ -16,7 +16,7 @@
         </div>
         <div class="discover-line">
           <span class="verb">{{ historyRecord.query.queryMode.toLowerCase() }} </span>
-          <span class="type-name">{{ typeName(historyRecord.query.queryString) }}</span>
+          <span class="type-name">{{ expressionTypeName(historyRecord.query.expression) }}</span>
         </div>
       </div>
       <div class="state-row">
