fixed issues with query builder not showing correct code

--- a/vyne-parent/vyne-query-service/src/main/web/src/app/query-wizard/query-wizard.component.html
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/query-wizard/query-wizard.component.html
@@ -60,7 +60,7 @@
     </div>
   </div>
   <div class="row">
-    <app-vyne-query-viewer [targetTypes]="targetTypeNames" [facts]="fakeFacts"
+    <app-vyne-query-viewer [targetTypes]="targetTypeNames" [facts]="facts"
                            [schema]="schema"
                            [queryMode]="queryMode.value"
                            expanded="true"
