--- a/vyne-parent/vyne-query-service/src/main/web/src/app/query-wizard/query-wizard.component.html
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/query-wizard/query-wizard.component.html
@@ -51,10 +51,16 @@
                 <mat-option value="GATHER">Gather (Find all the possible results)</mat-option>
               </mat-select>
             </mat-form-field>
+            <mat-form-field>
+              <mat-select placeholder="Result mode" [formControl]="resultMode" required>
+                <mat-option value="SIMPLE">Exclude Type Information (Simple)</mat-option>
+                <mat-option value="VERBOSE">Include Type Information (Verbose)</mat-option>
+              </mat-select>
+            </mat-form-field>
           </form>
         </mat-card-content>
         <mat-card-actions>
-          <button mat-button color="primary" (click)="submitQuery()">Submit query</button>
+          <button mat-raised-button color="primary" (click)="submitQuery()">Submit query</button>
         </mat-card-actions>
       </mat-card>
     </div>
