--- a/vyne-parent/vyne-query-service/src/main/web/src/app/query-wizard/result-display/simple-result-viewer.component.html
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/query-wizard/result-display/simple-result-viewer.component.html
@@ -1,27 +1,28 @@
 <div class="typed-value-container" *ngIf="isPrimitive">
 
-  <div class="type-name">{{ typedObject.typeName }}</div>
-  <div class="type-value">{{ typedObject.value }}</div>
+  <div class="type-name">{{ type?.name.name }}</div>
+  <div class="type-value">{{ result }}</div>
 </div>
 <div class="typed-object-container" *ngIf="isTypedObject">
-  <div class="type-name">{{ typedObject.typeName }}</div>
   <div *ngFor="let attributeName of typedObjectAttributeNames" class="attriubte-row">
     <div class="attribute-name">{{ attributeName }}</div>
     <div class="attribute-value">
-      <result-viewer [result]="getTypedObjectAttribute(attributeName)"
+      <simple-result-viewer [result]="getTypedObjectAttribute(attributeName)"
                      [schema]="schema"
-      ></result-viewer>
+                     [type]="getTypeForAttribute(attributeName)"
+      ></simple-result-viewer>
     </div>
 
   </div>
 </div>
 <div class="typed-object-container" *ngIf="isArray">
   <div *ngFor="let collectionMember of result; let i = index" class="result-collection-member">
-    <div class="collection-index">#{{i + 1}}</div>
+    <div class="collection-index">Item {{i + 1}}</div>
     <div class="collection-member">
-      <result-viewer [result]="collectionMember"
+      <simple-result-viewer [result]="collectionMember"
                      [schema]="schema"
-      ></result-viewer>
+                     [type]="type"
+      ></simple-result-viewer>
 
     </div>
   </div>
