--- a/vyne-parent/vyne-query-service/src/main/web/src/app/query-wizard/taxi-viewer/code-container.component.scss
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/query-wizard/taxi-viewer/code-container.component.scss
@@ -1,1 +1,10 @@
 @import "expand-panel";
+@import "src/theme";
+
+.highlight-container {
+  background-color: $code-background;
+}
+
+td-highlight {
+  background-color: $code-background;
+}
