--- a/vyne-parent/vyne-query-service/src/main/web/src/app/query-wizard/taxi-viewer/vyne-query-viewer/vyne-query-viewer.component.scss
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/query-wizard/taxi-viewer/vyne-query-viewer/vyne-query-viewer.component.scss
@@ -1,8 +1,19 @@
+@import "src/theme";
 @import "../expand-panel";
 
 .title-bar {
   background-color: white;
 }
+
+.highlight-container {
+  background-color: $code-background;
+}
+
+td-highlight {
+  background-color: $code-background;
+}
+
+
 
 .language-selector {
   display: flex;
