--- a/vyne-parent/vyne-query-service/src/main/web/src/app/type-viewer/type-link-graph/type-link-graph.component.scss
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/type-viewer/type-link-graph/type-link-graph.component.scss
@@ -5,7 +5,8 @@
 }
 
 .chart-outer-container {
-  height: 600px;
+  height: 450px;
+  border: 1px solid rgba($vyne-lilac, 0.1);
   background-color: $light-purple-grey-100;
 }
 
