--- a/vyne-parent/vyne-query-service/src/main/web/src/theme-colors.scss
+++ b/vyne-parent/vyne-query-service/src/main/web/src/theme-colors.scss
@@ -9,6 +9,7 @@ $dark-grey-2 : #344955;
 $dark-grey-3 : #232F34;
 $dark-grey-4 : #304f63;
 
+$vyne-primary: #2b9efb;
 $purple-grey: #5d6494;
 
 $red-1: #e53935;
@@ -31,7 +32,7 @@ $code-font-size: 15px;
 // deprecated - use code-formatter-theme
 $code-bg: #33374B;
 
-$whiteish: #d5d9ea;
+$purple-white: #d5d9ea;
 
 $grey-1: #f4f7fa;
 $grey-3: #12345f;
