--- a/vyne-parent/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
@@ -1,9 +1,10 @@
 <mat-toolbar color="primary">
   <span>Type Explorer</span>
+  <span class="spacer"></span>
   <div class="search-bar">
-    <button>Create</button>
     <!--    <input matInput placeholder="Search" [formControl]="searchInput">-->
   </div>
+  <button mat-button>Create</button>
   <!--<mat-form-field class="search-bar" floatLabel="never">-->
   <!--<mat-icon matPrefix>search</mat-icon>-->
   <!--<mat-label>Search</mat-label>-->
