fixed scrolling in ngx-graph viewer

--- a/vyne-parent/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
@@ -19,10 +19,10 @@
     </div>
 
 
-    <section>
-      <h2>About this type</h2>
-      <p>{{description}}</p>
-    </section>
+<!--    <section>-->
+<!--      <h2>About this type</h2>-->
+<!--      <p>{{description}}</p>-->
+<!--    </section>-->
     <section *ngIf="hasAttributes">
       <h2>Attributes</h2>
       <app-attribute-table [type]="type"></app-attribute-table>
