--- a/vyne-parent/vyne-query-service/src/main/web/src/app/type-viewer/type-link-graph/type-link-graph.component.scss
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/type-viewer/type-link-graph/type-link-graph.component.scss
@@ -6,6 +6,7 @@
 
 .chart-outer-container {
   height: 450px;
+  width: 100%;
   border: 1px solid rgba($vyne-lilac, 0.1);
   background-color: $light-purple-grey-100;
 }
