--- a/vyne-parent/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.scss
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.scss
@@ -9,6 +9,14 @@
   display: flex;
 }
 
+.documentation {
+  flex-grow: 1;
+  table {
+    width: 100%;
+  }
+}
+
+
 mat-toolbar {
   flex: 0 0 $toolbar-height;
   z-index: 999;
@@ -26,4 +34,9 @@ mat-toolbar {
     font-weight: 700;
   }
   margin-bottom: 2rem;
+}
+
+app-type-link-graph-container {
+  display: block;
+  width: 100%;
 }
