feat(ui): updated policy manager in type viewer

--- a/vyne-parent/vyne-query-service/src/main/web/src/app/policy-manager/policy-editor.component.scss
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/policy-manager/policy-editor.component.scss
@@ -1,9 +1,13 @@
 @import "src/theme";
+@import "policy-manager-common-styles";
 
-.component-container {
-  padding: 0 20px;
+.read-only-title {
+  display: flex;
+  align-items: center;
+  h4 {
+    padding-right: 24px;
+  }
 }
-
 .line-wrapper {
   display: flex;
   align-items: center;
