--- a/vyne-parent/vyne-query-service/src/main/web/src/app/policy-manager/policy-manager.component.scss
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/policy-manager/policy-manager.component.scss
@@ -6,7 +6,7 @@ mat-toolbar {
 }
 
 .content {
-  padding: 20px;
+  //padding: 20px;
   //display: flex;
 }
 .policy-list {
@@ -43,7 +43,6 @@ mat-toolbar {
 }
 
 .empty-state {
-  text-align: center;
   width: 100%;
 
   padding: 20px 0;
