--- a/vyne-parent/vyne-query-service/src/main/web/src/app/policy-manager/statement-editor.component.scss
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/policy-manager/statement-editor.component.scss
@@ -1,28 +1,6 @@
-@import "src/theme";
+@import "policy-manager-common-styles";
 
 .statement-container {
   display: flex;
   margin-bottom: 10px;
-  &:hover {
-    .button-container {
-      opacity: 1;
-    }
-  }
-}
-
-.button-container {
-  width: 100px;
-  opacity: 0;
-  mat-icon {
-    padding: 6px;
-    margin: 4px;
-    border: 1px solid $light-purple-grey;
-    cursor: pointer;
-
-    &:hover {
-      border: 1px solid $light-purple-grey-300;
-    }
-  }
-
-
 }
