search ui basics working

--- a/vyne-parent/vyne-query-service/src/main/web/src/app/search/seach-result/search-result.component.scss
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/search/seach-result/search-result.component.scss
@@ -16,6 +16,9 @@
     font-size: 0.9rem;
     color: lighten($body, 5%);
     margin-top: 12px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 
     .matchedText {
       border-bottom: 2px solid $vyne-primary;
