--- a/vyne-parent/vyne-query-service/src/main/web/src/app/type-list/type-list.component.html
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/type-list/type-list.component.html
@@ -12,75 +12,22 @@
 <div class="page-content">
   <div *ngFor="let member of filteredMembers | async" class="search-result" (click)="navigateToMember(member)">
     <div class="schema-member-container">
-      <div class="member-qualified-name">
-        <div class="member-name">{{ member.name.name}}
-          <div class="badges">
-            <span class="badge">{{ memberType(member) }}</span>
+      <div class="name-row">
+        <div class="member-qualified-name">
+          <div class="member-name">{{ member.name.name}}
+            <div class="badges">
+              <span class="badge">{{ memberType(member) }}</span>
+            </div>
           </div>
+          <div class="member-package">{{ member.name.fullyQualifiedName}}</div>
         </div>
-        <div class="member-package">{{ member.name.fullyQualifiedName}}</div>
+        <div class="member-type-alias">
+          {{ member.aliasForType}}
+        </div>
       </div>
-      <div class="member-type-alias">
-        {{ member.aliasForType}}
+      <div class="typedoc-row" *ngIf="member.member.typeDoc">
+        <span class="summary">{{member.member.typeDoc}}</span>
       </div>
     </div>
   </div>
-  <!--  <mat-accordion class="example-headers-align">-->
-  <!--    <mat-expansion-panel hideToggle *ngFor="let member of filteredMembers | async">-->
-  <!--      <mat-expansion-panel-header>-->
-  <!--        <div class="schema-member-container">-->
-  <!--          <div class="member-type">-->
-  <!--            <div [ngClass]="memberType(member).toLowerCase()">{{ memberType(member) }}</div>-->
-  <!--          </div>-->
-  <!--          <div class="member-qualified-name">-->
-  <!--            <div class="member-name">{{ member.name.name}}</div>-->
-  <!--            <div class="member-package">{{ member.name.fullyQualifiedName}}</div>-->
-  <!--          </div>-->
-  <!--          <div class="member-type-alias">-->
-  <!--            {{ member.aliasForType}}-->
-  <!--          </div>-->
-  <!--        </div>-->
-  <!--      </mat-expansion-panel-header>-->
-  <!--      <ng-template matExpansionPanelContent>-->
-  <!--        <div>-->
-  <!--          <mat-tab-group dynamicHeight="true">-->
-  <!--            <mat-tab label="Properties" *ngIf="member.kind == 'TYPE'">-->
-  <!--              <ng-template matTabContent>-->
-  <!--                <type-property-view [schemaMember]="member"></type-property-view>-->
-  <!--              </ng-template>-->
-  <!--            </mat-tab>-->
-  <!--            <mat-tab label="Parameters" *ngIf="member.kind == 'OPERATION'">-->
-  <!--              <ng-template matTabContent>-->
-  <!--                <parameter-view [schemaMember]="member"></parameter-view>-->
-  <!--              </ng-template>-->
-  <!--            </mat-tab>-->
-  <!--            <mat-tab label="Source">-->
-  <!--              <ng-template matTabContent>-->
-  <!--                <type-source-view [schemaMember]="member"></type-source-view>-->
-  <!--              </ng-template>-->
-  <!--            </mat-tab>-->
-  <!--            <mat-tab label="Links">-->
-  <!--              <ng-template matTabContent>-->
-  <!--                <type-links [member]="member"></type-links>-->
-  <!--              </ng-template>-->
-  <!--            </mat-tab>-->
-  <!--            <mat-tab label="Policies" *ngIf="member.kind == 'TYPE'">-->
-  <!--              <ng-template matTabContent>-->
-  <!--                <app-policy-manager [targetType]="type(member)"></app-policy-manager>-->
-  <!--              </ng-template>-->
-  <!--            </mat-tab>-->
-  <!--          </mat-tab-group>-->
-  <!--        </div>-->
-  <!--        <mat-action-row>-->
-  <!--          <button mat-button color="primary" (click)="startNewQuery(member)">Start a query</button>-->
-  <!--        </mat-action-row>-->
-  <!--      </ng-template>-->
-
-
-  <!--    </mat-expansion-panel>-->
-  <!--    <div *ngIf="members.length === 0" class="empty-state">-->
-  <!--      <img src="assets/img/getting-started.svg">-->
-  <!--      <div>There's nothing registered yet.  Why not try one of our <a href="https://docs.vyne.co">tutorials</a>, and register your first service.</div>-->
-  <!--    </div>-->
-  <!--  </mat-accordion>-->
 </div>
