--- a/vyne-parent/vyne-query-service/src/main/web/src/typography.scss
+++ b/vyne-parent/vyne-query-service/src/main/web/src/typography.scss
@@ -13,7 +13,9 @@ $font-sans-alt: Hind,system-ui,BlinkMacSystemFont,-apple-system,Segoe UI,Roboto,
 
 .mono-badge {
   font-family: $mono;
-  font-size: 0.85rem;
+  // Adding important here, as font sizes are getting
+  // overridden by search in the toolbar.
+  font-size: 0.85rem !important;
   color: $vyne-lilac;
   border: 1px solid rgba($vyne-lilac,0.6);
   background-color: rgba($vyne-lilac, 0.1);
