created new object layout view, not yet wired in

--- a/vyne-parent/vyne-query-service/src/main/web/src/app/object-view/object-view.component.scss
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/object-view/object-view.component.scss
@@ -2,28 +2,42 @@
 @import '~@angular/material/theming';
 
 .typed-value-container {
+  display: table-cell;
+  vertical-align: middle;
+  //padding-right: 1rem;
+}
 
+.table-cell {
+  display: table-cell;
+  vertical-align: middle;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.type-name.top-level {
+  font-size: 1.2rem;
+  margin-bottom: 1.2rem;
 }
 
 .type-name {
   //@include mat-elevation(1);
 
   font-family: $mono;
-  color: $whiteish;
-  background-color: $grey-3;
+  color: $vyne-lilac;
+  background-color: rgba($vyne-lilac, 0.1);
   font-size: 0.8rem;
 
-  border: 1px solid $dark-grey-1;
-  border-radius: 0 0 6px 0;
+  border: 1px solid rgba($vyne-lilac, 0.6);
+  border-radius: 6px;
 
   width: fit-content;
-  padding: 3px 6px;
-  margin-bottom: 6px;
+  padding: 0.2rem 0.4rem;
 }
 
 .result-collection-member {
   display: inline-table;
   width: 100%;
+
   .collection-index {
     display: table-cell;
     width: 100px;
@@ -33,6 +47,7 @@
     text-align: center;
     border-bottom: 1px solid $light-grey-1;
   }
+
   .collection-member {
     padding-left: 30px;
   }
@@ -41,27 +56,39 @@
 .typed-object-container {
   display: inline-table;
   border-collapse: collapse;
-  width: 100%;
 
-  .attriubte-row {
+  .attribute-row {
     display: table-row;
+
     &:not(:last-child) {
       border-bottom: 1px solid $light-grey-2;
     }
 
+    &.object-row {
+      .attribute-name, .type-name-container {
+        vertical-align: top;
+        padding-top: 0.5rem;
+      }
+    }
+
     .attribute-name {
-      padding-right: 3rem;
+      padding-right: 1rem;
       display: table-cell !important;
-      display: inline-block;
       vertical-align: middle;
-      width: 150px;
+      //width: 150px;
       color: $dark-grey-1;
       font-family: $mono;
     }
+
+    .type-name-container {
+      display: table-cell;
+      vertical-align: middle;
+      padding-right: 1rem;
+    }
+
     .attribute-value {
       display: table-cell !important;
-      display: inline-block;
-      padding-bottom: 1rem;
+      vertical-align: middle;
     }
 
   }
