--- a/vyne-parent/vyne-query-service/src/main/web/src/app/code-viewer/code-viewer.component.html
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/code-viewer/code-viewer.component.html
@@ -1,9 +1,9 @@
 <div class="file-list" *ngIf="displaySidebar">
-  <div class="file-list-entry" *ngFor="let source of sources">
+  <div class="file-list-entry" *ngFor="let source of sources" (click)="select(source)">
     <img class="icon" src="assets/img/file.svg"><span>{{ source.origin }}</span>
   </div>
 </div>
-<mat-tab-group class="code-viewer">
+<mat-tab-group class="code-viewer" [(selectedIndex)]="selectedIndex">
   <mat-tab *ngFor="let source of sources" [label]="source.origin">
     <ng-template matTabContent>
       <td-highlight [content]="source.content" [lang]="source.language"></td-highlight>
